# Generate-synthetic-data-with-missing-values

./: .gitignore  README.md  pyproject.toml
notebooks/: generate data under missingness assumption.ipynb
script/: generate MAR.py  generateMAR.py
src/mar_missing/: __init__.py  mar.py  version.py
tests/: test_mar_reproducibility.py  test_mar_split_behavior.py  test_mar_validation.py
tutorial/: Class for generating missing data.ipynb
